# cdk-auto-platform

./: .gitignore  LICENSE  README.md  package.json
src/: CHANGELOG.md  MANIFEST.in  pyproject.toml
src/cdk_auto_platform/: __init__.py
src/cdk_auto_platform/models/alarms/: __init__.py
src/cdk_auto_platform/models/blueprints/: database_blueprint.py  ecs_fargate_blueprint.py
src/cdk_auto_platform/models/database/: database_matrix.py
src/cdk_auto_platform/models/tenants/: tenant_base.py
src/cdk_auto_platform/models/vpc/: ip_ranges_types.py  prefix_list_cidr.py
src/cdk_auto_platform/modules/custom_lambda/: infrastructure.py
src/cdk_auto_platform/modules/ecs_fargate_service/: infrastructure.py
src/cdk_auto_platform/modules/ecs_fargate_task_definition/: infrastructure.py
src/cdk_auto_platform/modules/events/cron_trigger/: infrastructure.py
src/cdk_auto_platform/modules/logs/log_group/: infrastructure.py
src/cdk_auto_platform/modules/private/add_to_role_lambda/: infrastructure.py
src/cdk_auto_platform/modules/private/permission_actions/: ecs_services.py
src/cdk_auto_platform/stacks/base/shared_stack/: component.py
src/cdk_auto_platform/utils/: configs.py
src/iden_q_auto_platform/: __init__.py
src/iden_q_auto_platform/models/alarms/: __init__.py
src/iden_q_auto_platform/models/blueprints/: database_blueprint.py  ecs_fargate_blueprint.py
src/iden_q_auto_platform/models/compute/: fargate_configuration.py  fargate_task_compute.py  scaling_rule.py
src/iden_q_auto_platform/models/database/: database_matrix.py  rds_performance.py  service_user_secret.py
src/iden_q_auto_platform/models/environments/: app_environment.py
src/iden_q_auto_platform/models/tenants/: infrastructure_types.py  tenant_base.py
src/iden_q_auto_platform/modules/container_image/: infrastructure.py
src/iden_q_auto_platform/modules/custom_lambda/: infrastructure.py
src/iden_q_auto_platform/modules/docker_lambda/: infrastructure.py
src/iden_q_auto_platform/modules/ecr_registry/: infrastructure.py
src/iden_q_auto_platform/modules/ecs_fargate_service/: infrastructure.py
src/iden_q_auto_platform/modules/ecs_fargate_task_definition/: infrastructure.py
src/iden_q_auto_platform/modules/ecs_scheduled_fargate_task/: infrastructure.py
src/iden_q_auto_platform/stacks/base/core_stack/: component.py
src/iden_q_auto_platform/utils/: configs.py
(+24 files in other folders)
